Séance d'optimisation du pathfinding : memory manager, optimisation mémoire Vec2, suppression de double, …